<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPasswordText"
            android:hint="@string/password"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailText"
            app:layout_constraintHorizontal_bias="0.0"
            android:autofillHints="password" tools:targetApi="o"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmailText"
            android:hint="@string/email"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="emailAddress" tools:targetApi="o"/>

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginLoginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordText"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="loginLoginBtnOnClicked"/>

    <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpText"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>

    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginSignUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpText"
            android:background="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/white"
            android:onClick="loginSignUpBtnOnClicked"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpText"/>
</android.support.constraint.ConstraintLayout>