<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage|textPersonName"
            android:ems="10"
            android:id="@+id/addChannelNameText"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/channel_name"
            android:textColor="@android:color/darker_gray"/>

    <TextView
            android:text="@string/add_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAlignment="center"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addChannelDescText"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/addChannelNameText"
            android:hint="@string/channel_description"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>