<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom"
        android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/profiledefault"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/userImageNavHeader"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/userNameNavHeader"
            tools:text="WenhaoZ"
            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userEmailNavHeader"
            tools:text="wenhao.z@live.com"
            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>

    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/loginBtnNavHeader"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="loginBtnNavHeaderOnClicked"
            android:textAlignment="center"
            android:layout_marginStart="4dp"/>

    <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/addchannelbutton"
            android:id="@+id/addChannelBtn"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:padding="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="addChannelBtnOnClicked"
            android:contentDescription="@string/add_channel"
            android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>
